# cmake_guide

./: .gitgnore  .gitignore  CMakeLists.txt  README.md  main.cpp
dir_1/: helpers.cpp  helpers.h
liba/: CMakeLists.txt  liba.cpp  liba.h
libb/: CMakeLists.txt  libb.cpp  libb.h
