cmake_minimum_required(VERSION 3.21)

set(LIBA_SOURCES 
    ${CMAKE_CURRENT_LIST_DIR}/liba.cpp)

set(LIBA_HEADERS
    ${CMAKE_CURRENT_LIST_DIR}/liba.h)

message(WARNING "[LibA] CMAKE_CURRENT_LIST_DIR is  ${CMAKE_CURRENT_LIST_DIR}")
message(WARNING "[LibA] CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")
message(WARNING "[LibA] GLOBAL_VAR_TEST is: ${GLOBAL_VAR_TEST}")

add_library(liba ${LIBA_SOURCES} ${LIBA_HEADERS})

set(GLOBAL_VAR_TEST "GLOBAL_VAR_TEST_CHANGED_IN_LIBA")
set(LIBA_TEST_VAR "LibATestVariable")