cmake_minimum_required(VERSION 3.21)

set(LIBB_SOURCES 
    ${CMAKE_CURRENT_LIST_DIR}/libb.cpp)

set(LIBB_HEADERS
    ${CMAKE_CURRENT_LIST_DIR}/libb.h)

message(WARNING "[LibB] CMAKE_CURRENT_LIST_DIR is  ${CMAKE_CURRENT_LIST_DIR}")
message(WARNING "[LibB] CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")
message(WARNING "[LibB] GLOBAL_VAR_TEST is: ${GLOBAL_VAR_TEST}")

add_library(libb ${LIBB_SOURCES} ${LIBB_HEADERS})

set(LIBB_TEST_VAR "LibBTestVariable")
set(GLOBAL_VAR_TEST "GLOBAL_VAR_TEST_CHANGED_IN_LIBB")